1. fix ProcessorWorker init error if connection fails; 2. add nodeId as clientId prefix to avoid kicking; 3. remove boostrap config; 4. optimize script; 5. fix dependency error.